cmd/tools/vvet/tests/indent_with_space.vv
fn main() {
    _ = 1 == 2
}

fn block_comments() {
	/* tab to indent the comment
  spaces before
  also spaces before
  same here */
  /* spaces for comment indentation (ouch)
  and inside too
  */
}

fn space_inside_strings() {
	// Plain strings
  str := "Bad space usage for variable indentation.
  Here it's fine.
  Here too."
  str2 := 'linebreak and space\n  inside'
	// String interpolation
  si1 := 'Error here $foo
  and not here'
}
